--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         image: mcr.microsoft.com/mssql/server:2019-latest 
         env:
           ACCEPT_EULA: Y
-          MSSQL_PID: Developer
+          MSSQL_PID: Express
           MSSQL_SA_PASSWORD: testpassword
         ports:
           - 1433:1433
