--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,11 @@ jobs:
         env:
           ACCEPT_EULA: Y
           MSSQL_PID: Express
-          MSSQL_SA_PASSWORD: testpassword
+          MSSQL_SA_PASSWORD: TestPassword123!
         ports:
           - 1433:1433
         options: >-
-          --health-cmd "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P testpassword -Q 'SELECT 1'"
+          --health-cmd "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P TestPassword123! -Q 'SELECT 1'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -92,9 +92,9 @@ jobs:
       run: |
         echo "Waiting for SQL Server to be ready..."
         for i in {1..60}; do
-          if sqlcmd -S tcp:localhost,1433 -U sa -P testpassword -Q "SELECT @@VERSION" > /dev/null 2>&1; then
+          if sqlcmd -S tcp:localhost,1433 -U sa -P TestPassword123! -Q "SELECT @@VERSION" > /dev/null 2>&1; then
             echo "SQL Server is ready"
-            sqlcmd -S tcp:localhost,1433 -U sa -P testpassword -Q "SELECT @@VERSION"
+            sqlcmd -S tcp:localhost,1433 -U sa -P TestPassword123! -Q "SELECT @@VERSION"
             break
           fi
           echo "Attempt $i: SQL Server not ready yet..."
@@ -105,7 +105,7 @@ jobs:
       env:
         MSSQL_HOST: localhost
         MSSQL_USER: sa
-        MSSQL_PASSWORD: testpassword
+        MSSQL_PASSWORD: TestPassword123!
         MSSQL_DATABASE: master
         MSSQL_DRIVER: "{ODBC Driver 17 for SQL Server}"
         MSSQL_PORT: 1433
@@ -137,7 +137,7 @@ jobs:
         image: mcr.microsoft.com/azure-sql-edge:latest
         env:
           ACCEPT_EULA: Y
-          MSSQL_SA_PASSWORD: testpassword
+          MSSQL_SA_PASSWORD: TestPassword123!
         ports:
           - 1433:1433
 
@@ -163,7 +163,7 @@ jobs:
     - name: Wait for Azure SQL Edge to be ready
       run: |
         for i in {1..60}; do
-          if /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P testpassword -Q "SELECT 1" &> /dev/null; then
+          if /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P TestPassword123! -Q "SELECT 1" &> /dev/null; then
             echo "Azure SQL Edge is ready"
             break
           fi
@@ -175,7 +175,7 @@ jobs:
       env:
         MSSQL_HOST: localhost
         MSSQL_USER: sa
-        MSSQL_PASSWORD: testpassword
+        MSSQL_PASSWORD: TestPassword123!
         MSSQL_DATABASE: master
         AZURE_SQL_ENCRYPT: yes
         AZURE_SQL_TRUST_SERVER_CERTIFICATE: yes
